# Vulkan-Cookbook

./: CMakeLists.txt  README.md  build.bat
Samples/Common Files/: Camera.cpp  Camera.h  CookbookSampleFramework.cpp  CookbookSampleFramework.h  OS.cpp  OS.h  OrbitingCamera.cpp  OrbitingCamera.h
Samples/Data/Shaders/11 Lighting/01 Rendering a geometry with vertex diffuse lighting/: shader.frag  shader.frag.spv  shader.frag.spv.txt  shader.vert  shader.vert.spv  shader.vert.spv.txt
Samples/Data/Shaders/11 Lighting/02 Rendering a geometry with fragment specular lighting/: shader.frag  shader.frag.spv  shader.frag.spv.txt  shader.vert  shader.vert.spv  shader.vert.spv.txt
Samples/Data/Shaders/11 Lighting/03 Rendering a normal mapped geometry/: shader.frag  shader.frag.spv  shader.frag.spv.txt  shader.vert  shader.vert.spv  shader.vert.spv.txt
Samples/Data/Shaders/11 Lighting/04 Rendering a reflective and refractive geometry using cubemaps/: model.frag  model.frag.spv  model.frag.spv.txt  model.vert  model.vert.spv.txt  skybox.frag  skybox.frag.spv  skybox.frag.spv.txt  skybox.vert.spv.txt
Samples/Data/Shaders/11 Lighting/05 Adding shadows to the scene/: scene.frag  scene.frag.spv  scene.frag.spv.txt  scene.vert  scene.vert.spv  scene.vert.spv.txt  shadow.vert  shadow.vert.spv  shadow.vert.spv.txt
Samples/Data/Shaders/12 Advanced Rendering Techniques/01 Skybox/: shader.frag.spv.txt  shader.vert.spv
Samples/Data/Shaders/12 Advanced Rendering Techniques/02 Drawing billboards using geometry shaders/: shader.frag  shader.frag.spv  shader.frag.spv.txt  shader.geom  shader.geom.spv  shader.geom.spv.txt  shader.vert  shader.vert.spv  shader.vert.spv.txt
Samples/Data/Shaders/12 Advanced Rendering Techniques/03 Drawing particles using compute and graphics pipelines/: shader.comp  shader.comp.spv  shader.comp.spv.txt  shader.frag  shader.frag.spv  shader.frag.spv.txt  shader.geom  shader.geom.spv  shader.geom.spv.txt  shader.vert  shader.vert.spv  shader.vert.spv.txt
Samples/Data/Shaders/12 Advanced Rendering Techniques/04 Rendering a tesselated terrain/: shader.frag  shader.frag.spv  shader.frag.spv.txt  shader.geom  shader.geom.spv  shader.geom.spv.txt  shader.tesc  shader.tesc.spv  shader.tesc.spv.txt  shader.tese  shader.tese.spv  shader.tese.spv.txt
Samples/Data/Shaders/12 Advanced Rendering Techniques/05 Rendering a fullscreen quad for postprocessing/: shader.frag  shader.frag.spv  shader.frag.spv.txt  shader.vert
Samples/Data/Shaders/12 Advanced Rendering Techniques/06 Using input attachment for color correction postprocess effect/: model.frag  model.frag.spv  model.frag.spv.txt  model.vert.spv  postprocess.frag  postprocess.frag.spv  postprocess.frag.spv.txt  postprocess.vert.spv.txt  skybox.frag.spv.txt  skybox.vert.spv.txt
Samples/Data/Shaders/12 Advanced Rendering Techniques/07 Implementing blur using a compute pipeline/: model.frag.spv.txt  model.vert.spv.txt  skybox.vert
Samples/Data/Shaders/Other/04 Using Graphics Pipeline/: shader.frag  shader.vert.spv
Samples/Data/Shaders/Other/05 Using Combined Image Samplers/: shader.frag  shader.frag.spv  shader.frag.spv.txt  shader.vert.spv.txt
Samples/Data/Shaders/Other/06 Using Uniform Buffers/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shader.vert.spv.txt
Samples/Data/Shaders/Other/07 Using Push Constants/: shader.frag  shader.frag.spv  shader.frag.spv.txt
Samples/Data/Shaders/Other/08 Using Tessellation Shaders/: shader.frag.spv.txt  shader.tesc  shader.tesc.spv  shader.tesc.spv.txt  shader.tese  shader.tese.spv  shader.tese.spv.txt  shader.vert.spv.txt
Samples/Data/Shaders/Other/09 Using Geometry Shaders/: shader.frag.spv  shader.geom  shader.geom.spv  shader.geom.spv.txt
Samples/Data/Shaders/Other/10 Using Compute Shaders/: shader.comp  shader.comp.spv  shader.comp.spv.txt
Samples/Data/Shaders/Other/11 Drawing Vertex Normals/: model.frag  model.frag.spv.txt  model.vert  model.vert.spv.txt  normals.frag  normals.geom  (+7 more)
Samples/Source Files/11 Lighting/01-Rendering_a_geometry_with_vertex_diffuse_lighting/: main.cpp
Samples/Source Files/11 Lighting/02-Rendering_a_geometry_with_fragment_specular_lighting/: main.cpp
Samples/Source Files/11 Lighting/03-Rendering_a_normal_mapped_geometry/: main.cpp
Samples/Source Files/11 Lighting/04-Rendering_a_reflective_and_refractive_geometry_using_cubemaps/: main.cpp
Samples/Source Files/11 Lighting/05-Adding_shadows_to_the_scene/: main.cpp
Samples/Source Files/12 Advanced Rendering Techniques/01-Drawing_a_skybox/: main.cpp
Samples/Source Files/12 Advanced Rendering Techniques/02-Drawing_bilboards_using_geometry_shaders/: main.cpp
Samples/Source Files/12 Advanced Rendering Techniques/03-Drawing_particles_using_compute_and_graphics_pipelines/: main.cpp
Samples/Source Files/12 Advanced Rendering Techniques/04-Rendering_a_tesselated_terrain/: main.cpp
Samples/Source Files/12 Advanced Rendering Techniques/05-Rendering_a_fullscreen_quad_for_postprocessing/: main.cpp
Samples/Source Files/12 Advanced Rendering Techniques/06-Using_input_attachment_for_color_correction_postprocess_effect/: main.cpp
Samples/Source Files/Other/01-Creating_Logical_Device/: main.cpp
Samples/Source Files/Other/02-Creating_Swapchain/: main.cpp
Samples/Source Files/Other/03-Using_Render_Passes/: main.cpp
Samples/Source Files/Other/04-Using_Graphics_Pipeline/: main.cpp
Samples/Source Files/Other/05-Using_Combined_Image_Samplers/: main.cpp
Samples/Source Files/Other/06-Using_Uniform_Buffers/: main.cpp
Samples/Source Files/Other/07-Using_Push_Constants/: main.cpp
Samples/Source Files/Other/08-Using_Tessellation_Shaders/: main.cpp
Samples/Source Files/Other/09-Using_Geometry_Shaders/: main.cpp
Samples/Source Files/Other/10-Using_Compute_Shaders/: main.cpp
Samples/Source Files/Other/11-Drawing_Vertex_Normals/: main.cpp
Samples/Source Files/Other/12-Using_Depth_Attachments/: main.cpp
Samples/Source Files/Other/13-Enabling_Alpha_Blending/: main.cpp
Samples/Source Files/Other/14-Drawing_Single_Fullscreen_Triangle_For_Postprocessing/: main.cpp
(+15 files in other folders)
